# cpp-bindings-linux

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: block_pr_check_labels.yml  build-deno-so.yml  build_binary.yml  ci.yml  code_coverage_cpp.yml  cpp-tests.yml  deno-tests.yml  publish-jsr.yml  publish_jsr.yml  test_unit_cpp.yml
docs/: building.md  examples.md  ffi_deno.md  overview.md
examples/: serial_advanced.ts  serial_callbacks.ts  serial_echo.ts
integration_tests/: deno.json  ffi_bindings.ts  integration_test.ts
jsr/: .gitignore  README.md  ffi.ts  jsr.json  jsr.json.in  mod.ts
jsr/binaries/: linux-x86_64.json
jsr/package/: README.md  jsr.json.in
jsr/scripts/: binary_to_json.sh  convert_binary_to_json.ts  copy_binary.sh  embed_binary.sh  embed_binary.ts  embed_so.ts  set_version.sh
src/: placeholder.cpp  serial.cpp  serial.h  serial_abort_read.cpp  serial_abort_write.cpp  serial_clear_buffer_in.cpp  serial_clear_buffer_out.cpp  serial_close.cpp  serial_close.test.cpp  serial_drain.cpp  serial_get_baudrate.cpp  serial_get_config.cpp  serial_get_cts.cpp  serial_get_data_bits.cpp  serial_get_dcd.cpp  serial_get_dsr.cpp  serial_get_flow_control.cpp  serial_get_parity.cpp  serial_get_ri.cpp  serial_get_stop_bits.cpp  serial_in_bytes_total.cpp  serial_in_bytes_waiting.cpp  serial_internal.hpp  serial_list_ports.cpp  serial_monitor_ports.cpp  serial_open.cpp  serial_open.test.cpp  serial_out_bytes_total.cpp  serial_out_bytes_waiting.cpp  serial_ports_info.cpp  serial_read.cpp  serial_read.test.cpp  serial_read_until.cpp  serial_read_until_sequence.cpp  serial_send_break.cpp  serial_set_baudrate.cpp  serial_set_data_bits.cpp  serial_set_dtr.cpp  serial_set_error_callback.cpp  serial_set_flow_control.cpp  (+10 more)
src/detail/: abort_registry.cpp  abort_registry.hpp  posix_helpers.hpp  posix_termios2.hpp
tests/: integration.test.cpp  serial_arduino.test.cpp  serial_test.cpp  serial_unit_tests.cpp  test_abort.cpp  test_serial_arduino.cpp  test_serial_functions.cpp
